[gd_scene load_steps=2 format=3 uid="uid://cb5tygfm1h6hp"]

[ext_resource type="Script" path="res://scripts/lesson_scene.gd" id="1"]

[node name="LessonScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LessonTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lección"
horizontal_alignment = 1

[node name="QuestionContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Question" type="Label" parent="VBoxContainer/QuestionContainer"]
layout_mode = 2
text = "Pregunta"
horizontal_alignment = 1

[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer/QuestionContainer"]
layout_mode = 2

[node name="Option1" type="Button" parent="VBoxContainer/QuestionContainer/OptionsContainer"]
layout_mode = 2
text = "Opción 1"

[node name="Option2" type="Button" parent="VBoxContainer/QuestionContainer/OptionsContainer"]
layout_mode = 2
text = "Opción 2"

[node name="Option3" type="Button" parent="VBoxContainer/QuestionContainer/OptionsContainer"]
layout_mode = 2
text = "Opción 3"

[node name="Option4" type="Button" parent="VBoxContainer/QuestionContainer/OptionsContainer"]
layout_mode = 2
text = "Opción 4"

[node name="Feedback" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="Progress" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Progreso: 0/0"
horizontal_alignment = 1

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Puntuación: 0"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Volver al Menú"
